# OpenShell

./: AGENTS.md  CONTRIBUTING.md  README.md  mise.toml  snapcraft.yaml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release-dev.yml  release-tag.yml
architecture/: README.md  sandbox.md  security-policy.md
crates/openshell-bootstrap/src/: build.rs
crates/openshell-cli/src/: main.rs  run.rs  ssh.rs
crates/openshell-cli/tests/: provider_commands_integration.rs  sandbox_name_fallback_integration.rs
crates/openshell-core/: Cargo.toml
crates/openshell-core/src/: config.rs  driver_utils.rs  google_cloud.rs  inference.rs  lib.rs  net.rs  provider_credentials.rs  sandbox_env.rs  (+1 more)
crates/openshell-driver-podman/: Cargo.toml  README.md
crates/openshell-policy/: Cargo.toml
crates/openshell-policy-schema/: Cargo.toml
crates/openshell-policy-schema/src/: lib.rs
deploy/docker/: Dockerfile.cli-macos  Dockerfile.python-wheels-macos
docs/providers/: google-cloud.mdx  google-vertex-ai.mdx
docs/reference/: gateway-config.mdx  sandbox-compute-drivers.mdx
docs/sandboxes/: manage-providers.mdx  manage-sandboxes.mdx  policies.mdx  policy-advisor.mdx  providers-v2.mdx
e2e/rust/: Cargo.toml
providers/: google-cloud.yaml
rfc/: README.md
rfc/0000-template/: README.md
rfc/0001-core-architecture/: README.md
rfc/0002-agent-driven-policy-management/: README.md
rfc/0003-gateway-configuration/: README.md
rfc/0009-supervisor-middleware/: README.md
scripts/agents/: README.md  run.sh
tasks/: python.toml
tasks/scripts/: gateway.sh
(+58 files in other folders)
